[project]
name = "frontier-scans-cleanup"
version = "0.5.0"
description = "A script to fix metadata and reorganize film scans from Fujifilm Frontier scanners."
authors = [
    { name = "Bobo Li", email = "bobo@photolaundrysf.com" },
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "wand>=0.6.11",
    "pyexiftool>=0.5.6",
    "readchar>=4.0.5"
]

[project.scripts]
frontier-clean-c4c5 = "frontier_scans_cleanup.cleanup_c4c5:cli"
frontier-clean-ms01 = "frontier_scans_cleanup.cleanup_ms01:cli"

[tool.ruff]
line-length = 79

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
